--- a/public/shoppingPage/style.css
+++ b/public/shoppingPage/style.css
@@ -3,25 +3,65 @@
     --orange: #FF7231;
     --lightOrang:#FF9D56;
     --grey:#c0c0c0;
+    --cyan : #00ffff;
+    --darkCyan : #268a6d;
 }
 *{
     padding: 0px;
     margin: 0px;
 }
-nav {
-    display: flex !important;
-    justify-content: space-around;
-    font-size: 28px;
-    background-color: #323232;
-    padding: 20px 10px;
-}
-nav a {
-    text-decoration: none;
+header {
+    width: 100%;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #444;
+    color: rgb(250, 250, 250);
+    box-shadow: 0 4px 4px 0 #222
+  }
+  
+  header h1 {
+    text-transform: uppercase;
+  }
+  
+  header h1::first-letter {
+    color:rgb(129, 255, 219);
+  }
+  
+  header ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    list-style: none;
+    margin: 0 8rem;
+  }
+  
+  header ul li {
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  header ul li:hover {
+    color: rgb(129, 255, 219);
+  }
+  
+  header a {
+    text-transform: uppercase;
     color: #fff;
-}
-.navbarItem a {
-    margin: 0px 10px;
-}
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+    margin-left: 1rem;
+    font-size: 0.8rem;
+  }
+  
+  header a:hover {
+    outline: 1px solid rgb(129, 255, 219);
+    color: rgb(129, 255, 219);
+  }
 main{
     display: flex;
     flex-flow: column nowrap;
@@ -33,6 +73,17 @@ main{
 }
 #filtter{
  
+}
+#search {
+    text-align: center;
+    margin: 50px 5px 10px 0px;
+}
+
+#searchField {
+    outline: none;
+    border-radius: 10px;
+    padding: 7px 20px;
+    border: 1px solid #315c50;
 }
 #products{
     width: 100%;
@@ -69,7 +120,7 @@ main{
     margin: 10px 0px 0px 20px;   
 }
 .buy-product-btn{
-    background-image: linear-gradient(to right, var(--orange), var(--lightOrang));
+    background-image: linear-gradient(to right, var(--cyan), var(--darkCyan));
     padding: 8px 0px;
     margin: 32px 16px;
     border-radius: 16px;
@@ -78,7 +129,7 @@ main{
     transition: all .2s ease-in-out;
 }
 .buy-product-btn:hover{
-    box-shadow: 0px 0px 10px 2px var(--lightOrang);
+    box-shadow: 0px 0px 10px 2px var(--cyan);
 }
 
 
