--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 :root{
-
+    --cyan : #00ffff;
+    --darkCyan : #268a6d;
     --white : #FFF;
 }
 *{
@@ -17,21 +18,58 @@ header{
     /* height: ; */
 }
 /*  -------------------------------------- Start About Navbar -------------------------------------- */
-nav {
-    display: flex !important;
-    justify-content: space-around;
-    font-size: 28px;
-    background-color: #323232;
-    padding: 20px 10px;
-}
-nav a {
-    text-decoration: none;
+header {
+    width: 100%;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #444;
+    color: rgb(250, 250, 250);
+    box-shadow: 0 4px 4px 0 #222
+  }
+  
+  header h1 {
+    text-transform: uppercase;
+  }
+  
+  header h1::first-letter {
+    color:rgb(129, 255, 219);
+  }
+  
+  header ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    list-style: none;
+    margin: 0 8rem;
+  }
+  
+  header ul li {
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  header ul li:hover {
+    color: rgb(129, 255, 219);
+  }
+  
+  header a {
+    text-transform: uppercase;
     color: #fff;
-}
-.navbarItem a {
-    margin: 0px 10px;
-}
-
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+    margin-left: 1rem;
+    font-size: 0.8rem;
+  }
+  
+  header a:hover {
+    outline: 1px solid rgb(129, 255, 219);
+    color: rgb(129, 255, 219);
+  }
 /*  -------------------------------------- End About Navbar -------------------------------------- */
 
 /*  -------------------------------------- Start About main -------------------------------------- */
@@ -49,7 +87,6 @@ nav a {
 .introPage p  {
     text-align: center;
     color: gray;
-    
 }
 
 .introPage img {
@@ -60,11 +97,16 @@ nav a {
 .btn {
     text-decoration: none;
     color: #fff;
-    background-color: rgb(255, 72, 0);
+    background-image: linear-gradient(to right, var(--cyan), var(--darkCyan));
     border-radius: 15px;
-    padding: 5px 45px;
+    padding: 10px 65px;
     opacity: 0.8;
     margin-bottom: 75px;
+}
+.btn:hover{
+    box-shadow: 0px 0px 10px 2px rgb(160, 157, 157);
+    transform: translate(2px);
+    transition: all 0.3s ease;
 }
 
 .productionPage {
@@ -85,6 +127,14 @@ nav a {
  .appleWatch .descriptionProduct {
     color: #000;
  }
+ .descriptionProduct .btn {
+    background-image: linear-gradient(to right, #ffffff, #7b7b7b);
+ }
+
+ .descriptionProduct .btn:hover {
+    box-shadow: 0px 0px 10px 2px var(--white);
+    transform: translate(2px);
+    transition: all 0.3s ease; }
 
 .product {
     max-width: 50%;
@@ -153,5 +203,6 @@ footer > div {
 .icons i {
     font-size: 25px;
     padding: 19px;
+    cursor: pointer;
 }
 /*  -------------------------------------- End About Footer -------------------------------------- */
