--- a/public/style.css
+++ b/public/style.css
@@ -70,6 +70,15 @@ header {
     outline: 1px solid rgb(129, 255, 219);
     color: rgb(129, 255, 219);
   }
+
+  header a:nth-child(1) {
+    font-size: 0.8rem;
+  }
+  
+  header a:nth-child(1):hover {
+    outline: 0;
+    color: #eee;
+  }
 /*  -------------------------------------- End About Navbar -------------------------------------- */
 
 /*  -------------------------------------- Start About main -------------------------------------- */
